[package]
name = "nash-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive", "env"] }
duckdb = { version = "1.3.2", features = ["bundled", "chrono"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"